ircv3_parse_derive/tests/ui/de/fail/default_without_component.stderr
error: `default` can only be used together with a component attribute (`tag`, `tag_flag`, `source`, `param`, `params`, or `trailing`)
 --> tests/ui/de/fail/default_without_component.rs:5:11
  |
5 |     #[irc(default)]
  |           ^^^^^^^

error: `default` can only be used together with a component attribute (`tag`, `tag_flag`, `source`, `param`, `params`, or `trailing`)
  --> tests/ui/de/fail/default_without_component.rs:15:11
   |
15 |     #[irc(default = "default_fn")]
   |           ^^^^^^^
